--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -13,4 +13,12 @@ hex = "0.4.3"
 base64 = "0.22.1"
 bincode = "1.3"
 byteorder = "1.5.0"
-sha2 = "0.10"
+bip39 = {version = "2.2.2", features = ["rand"]}
+ed25519-dalek = "2.2.0"
+ed25519-dalek-bip32 = "0.3.0"
+pqc_kyber = "0.7.1"
+rand_core = "0.9.5"
+hmac = "0.12.1"
+sha2 = "0.10.9"
+bs58 = "0.5.1"
+
