--- a/methods/guest/Cargo.toml
+++ b/methods/guest/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2024"
 
 [dependencies]
 risc0-zkvm = { version = "3.0.4", default-features = false, features = ["std"] }
-core = { path = "../../core" }
+qcash_core = { path = "../../core" }
 sha2 = { version = "0.10", default-features = false }
