--- a/extension/public/manifest.json
+++ b/extension/public/manifest.json
@@ -1,12 +1,20 @@
 {
   "manifest_version": 3,
   "name": "QCash Wallet",
-  "version": "1.0",
-  "permissions": ["nativeMessaging"],
+  "version": "0.1.0",
+  "description": "Quantum-Safe Privacy Wallet",
+  "permissions": [
+    "storage",
+    "activeTab"
+  ],
   "action": {
     "default_popup": "index.html"
   },
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "type": "module"
+  },
+  "content_security_policy": {
+    "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'"
   }
 }
