--- a/extension/package.json
+++ b/extension/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.32.1",
+    "@noble/hashes": "^2.0.1",
     "@radix-ui/react-slot": "^1.2.4",
+    "@solana/web3.js": "^1.98.4",
     "@tailwindcss/vite": "^4.1.18",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
