--- a/qcash_programs/package.json
+++ b/qcash_programs/package.json
@@ -1,6 +1,9 @@
 {
   "license": "ISC",
   "scripts": {
+    "build": "anchor build",
+    "sync-idl": "cp target/idl/solana_programs.json ../extension/src/idl/qcash_program.json && echo 'IDL synced to extension'",
+    "build:sync": "npm run build && npm run sync-idl",
     "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
   },
