--- a/solana/programs/qcash/Cargo.toml
+++ b/solana/programs/qcash/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "qcash_programs"
+name = "qcash"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "qcash_programs"
+name = "qcash"
 
 [features]
 default = []
