--- a/qcash-faucet/backend/Cargo.toml
+++ b/qcash-faucet/backend/Cargo.toml
@@ -13,9 +13,13 @@ anyhow = "1.0.100"
 hex = "0.4.3"
 bs58 = "0.5.1"
 solana-sdk = "3.0.0"
+bincode = "1.3"
 solana-client = "3.1.7"
+borsh = "1.6.0"
 anchor-client = "0.32.1"
 dotenv = "0.15.0"
-# qcash-core = { path = "../core"}
+qcash_core = { path = "../../core"}
 pqc_kyber = "0.7.1"
 actix-cors = "0.7.1"
+rand = "=0.8"
+chacha20poly1305 = "0.10.1"
