--- a/qcash-faucet/backend/Cargo.toml
+++ b/qcash-faucet/backend/Cargo.toml
@@ -12,14 +12,16 @@ serde_json = "1.0.149"
 anyhow = "1.0.100"
 hex = "0.4.3"
 bs58 = "0.5.1"
-solana-sdk = "3.0.0"
+solana-sdk = "2.2"
 bincode = "1.3"
-solana-client = "3.1.7"
+solana-client = "2.2"
 borsh = "1.6.0"
 anchor-client = "0.32.1"
 dotenv = "0.15.0"
 qcash_core = { path = "../../core"}
+# qcash = { path = "../../solana/programs/qcash", features = ["cpi"] }
 pqc_kyber = "0.7.1"
 actix-cors = "0.7.1"
 rand = "=0.8"
 chacha20poly1305 = "0.10.1"
+sha2 = "0.10.9"
