implemented the sync Utxo logic functionality

--- a/extension/public/manifest.json
+++ b/extension/public/manifest.json
@@ -5,7 +5,8 @@
   "description": "Quantum-Safe Privacy Wallet",
   "permissions": [
     "storage",
-    "activeTab"
+    "activeTab",
+    "alarms"
   ],
   "action": {
     "default_popup": "index.html"
