--- a/extension/public/manifest.json
+++ b/extension/public/manifest.json
@@ -6,7 +6,8 @@
   "permissions": [
     "storage",
     "activeTab",
-    "alarms"
+    "alarms",
+    "nativeMessaging"
   ],
   "action": {
     "default_popup": "index.html"
