--- a/solana/programs/qcash/Cargo.toml
+++ b/solana/programs/qcash/Cargo.toml
@@ -22,7 +22,7 @@ custom-panic = []
 
 [dependencies]
 anchor-lang = "0.32.1"
-solana-program = "1.18"
+solana-sha256-hasher = "3.1.0"
 blake3 = "=1.5.0"
 
 
