--- a/solana/programs/qcash/Cargo.toml
+++ b/solana/programs/qcash/Cargo.toml
@@ -21,7 +21,7 @@ custom-panic = []
 
 
 [dependencies]
-anchor-lang = "0.32.1"
+anchor-lang = { version = "0.32.1", features = ["init-if-needed", "event-cpi"] }
 solana-sha256-hasher = "3.1.0"
 blake3 = "=1.5.0"
 
