chore: add .aider* to .gitignore and update Cargo.lock with new dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,10 @@ resolver = "3"
 members = [
     "core",
     "daemon",
+    "interface",
     "methods",
     "methods/guest",
-    "wasm"
+    "node",
+    "qcash-faucet/backend",
+    "wasm",
 ]
