--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2024"
 [dependencies]
 qcash_core = { path = "../core", features = ["wallet"] }
 methods = { path = "../methods" }
-risc0-zkvm = "3.0.4"
+risc0-zkvm = { version = "3.0.4" }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
 hex = "0.4.3"
