--- a/interface/Cargo.toml
+++ b/interface/Cargo.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-solana-sdk = "3.0.0"
+solana-instruction = "2"
+anchor-lang = "0.32"
+
+[build-dependencies]
+serde_json = "1"
+serde = "1"
