--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -8,9 +8,9 @@ anyhow = "1.0.100"
 base64 = "0.22.1"
 futures = "0.3.31"
 risc0-zkvm = "3.0.4"
-solana-client = "3.1.8"
-solana-pubsub-client = "3.1.8"
-tokio = { version = "1.49.0", features = ["full"] }
+solana-client = "2.3"
+solana-pubsub-client = "2.3"
+tokio = { version = "1.35.0", features = ["full"] }
 tracing = "0.1.44"
 tracing-subscriber = { version = "0.3.22", features = [
     "json",
@@ -18,6 +18,10 @@ tracing-subscriber = { version = "0.3.22", features = [
     "env-filter",
 ] }
 
-interface = { path = "../interface" }
-solana-sdk = "3.0.0"
+solana-sdk = "2.3"
 sha3 = "0.10.8"
+
+interface = { path = "../interface" }
+qcash = { path = "../solana/programs/qcash" }
+bincode = "1.3"
+anchor-lang = "0.32.1"
