--- a/solana/programs/qcash/Cargo.toml
+++ b/solana/programs/qcash/Cargo.toml
@@ -23,8 +23,10 @@ custom-panic = []
 [dependencies]
 anchor-lang = { version = "0.32.1", features = ["init-if-needed", "event-cpi"] }
 solana-sha256-hasher = "3.1.0"
-blake3 = "=1.5.0"
+blake3 = "1"
 
 
 [lints.rust]
-unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
+unexpected_cfgs = { level = "warn", check-cfg = [
+    'cfg(target_os, values("solana"))',
+] }
