--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,9 @@ resolver = "3"
 members = [
     "core",
     "daemon",
+    "interface",
     "methods",
     "methods/guest",
-    "wasm"
+    "node",
+    "wasm",
 ]
