--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -16,4 +16,6 @@ tracing = "0.1.44"
 tracing-subscriber = "0.3.22"
 
 interface = { path = "../interface" }
+#qcash = { path = "../solana/programs/qcash" }
 solana-client = "2"
+sha3 = "0.10.8"
