--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -20,6 +20,7 @@ tracing-subscriber = { version = "0.3.22", features = [
 
 solana-sdk = "2.3"
 sha3 = "0.10.8"
+sha2 = "0.10"
 
 interface = { path = "../interface" }
 qcash = { path = "../solana/programs/qcash" }
