--- a/solana/package.json
+++ b/solana/package.json
@@ -16,6 +16,7 @@
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
     "chai": "^4.3.4",
+    "js-sha3": "^0.9.3",
     "mocha": "^9.0.3",
     "prettier": "^2.6.2",
     "ts-mocha": "^10.0.0",
