--- a/solana/Anchor.toml
+++ b/solana/Anchor.toml
@@ -6,7 +6,10 @@ resolution = true
 skip-lint = false
 
 [programs.localnet]
-qcash = "DMiW8pL1vuaRSG367zDRRkSmQM8z5kKUGU3eC9t7AFDT"
+qcash = "QCashfSHwqptwFRSbqjBnxYH7GbDzbAfxVeDGXhL1fv"
+
+[programs.devnet]
+qcash = "QCashfSHwqptwFRSbqjBnxYH7GbDzbAfxVeDGXhL1fv"
 
 [registry]
 url = "https://api.apr.dev"
