--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -22,6 +22,7 @@ solana-sdk = "2.3"
 sha2 = "0.10"
 
 interface = { path = "../interface" }
+methods = { path = "../methods" }
 qcash = { path = "../solana/programs/qcash" }
 bincode = "1.3"
 anchor-lang = "0.32.1"
